# api/routers/image.js
@@ -17,6 +17,19 @@ image.get('/', async (req, res) => {
     }
 });
 
+image.get('/background', async (req, res) => {
+    try {
+        const connection = await mysql.createConnection(dbConfig);
+        const [rows] = await connection.execute('SELECT * FROM background');
+
+        res.status(200).json(rows);
+
+        await connection.end();
+    } catch (error) {
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
 image.get('/:id', async (req, res) => {
     const imageId = req.params.id;
 
